# larder

./: .buildinfo  CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/larder/: crude.html  dog.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: larder.rst.txt
_sources/module_docs/larder/: crude.rst.txt  dog.rst.txt
larder/: __init__.py  crude.py  dog.py
larder/tests/: test_crude.py  test_crudify_based_on_names.py  test_dog.py  test_input_sourcing.py  test_input_wire.py  test_output_store.py
larder/wip/: input_sourcing.py  input_wire.py
module_docs/: larder.html
module_docs/larder/: crude.html  dog.html
stored/: __init__.py  dog.py
stored/tests/: test_crude.py  test_crudify_based_on_names.py  test_dog.py  test_input_sourcing.py  test_input_wire.py  test_output_store.py
stored/wip/: input_wire.py
