[metadata]
root_url = https://github.com/i2mint/
license = mit
version = 0.0.1
description = Connect functions to stores - fetch inputs & persist outputs
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = stored
display_name = stored

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    au
    dol
    i2
		
